# ai-dev-workshop

./: LICENSE  README.md
.claude/: settings.json  settings.local.json
docs/slides/: charla-es.html  charla-slides-ai-gathering-en.html  charla-slides-en.html  charla-slides-es.html  charla-slides-short-en.html  charla-templates.html
docs/workshop/: guion-workshop.md  notas-workshop.md  workshop-slides-en.html  workshop-slides-es.html  workshop-slides-extended-en.html  workshop-slides.html
final/: charla-es.html  resumen_workshop.md
slides/: Ideas_recursos.md  Ideas_recursos_para_añadir.md  charla-es.html  charla.html  guion_charla.md  guion_workshop.md  notas-charla-es.md
workshop/: guion-workshop.md  resumen_workshop.md  skills-table.html  workshop-slides.html
workshop-project/: .gitignore  Dockerfile  ___CLAUDE.md  docker-compose.yml  pyproject.toml
workshop-project/.claude/: ___settings.json
workshop-project/.claude/___rules/: commands.md
workshop-project/.claude/___skills/code-reviewer/: SKILL.md
workshop-project/scripts/: ready.sh
workshop-project/src/app/: main.py  models.py  routes.py  service.py
workshop-project/tests/: architecture.puml  test_architecture.py  test_tasks.py
