[project]
name = "workshop-tasks"
version = "0.1.0"
description = "Workshop project: simple tasks API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mutmut>=3.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.mutmut]
paths_to_mutate = ["src/"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
